--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -1,13 +1,11 @@
-@import "./constants.scss";
+@import "../variables/variables.scss";
 
 html,
 body {
   margin: 0;
   padding: 0;
-  padding-top: 30px;
   background-color: #f4f4f4;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  font-size: 21px;
   color: #666;
 }
 
@@ -68,6 +66,7 @@ ul {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  padding-top: 60px;
 }
 
 .row {
@@ -98,11 +97,23 @@ ul {
 @media (max-width: $small) {
   .container {
     max-width: 540px;
+    padding: 0;
   }
 }
 
 @media (max-width: $xs) {
   .container {
     width: 100%;
+  }
+
+  p,
+  button,
+  .button_red,
+  .button_blue,
+  ul,
+  li,
+  q,
+  i {
+    font-size: 15px;
   }
 }
