--- a/styles/copyright/copyright.scss
+++ b/styles/copyright/copyright.scss
@@ -1,4 +1,4 @@
-@import "./constants.scss";
+@import "../variables/variables.scss";
 
 .copyright {
   text-align: center;
@@ -14,5 +14,14 @@
 @media (max-width: $small) {
   .copyright {
     font-size: 10px;
+  }
+}
+
+@media (max-width: $xs) {
+  .copyright {
+    padding: 0;
+    p {
+      font-size: 10px;
+    }
   }
 }
