--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -1,8 +1,7 @@
 .footer {
   width: 100%;
   background-color: #666;
-  margin-top: -55px;
-  padding-top: 100px;
+  padding-top: 35px;
   padding-bottom: 30px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -67,6 +66,15 @@
   .footer-leftPart, .footer-rightPart {
     width: 100%;
     text-align: center;
+  }
+  .footer h3 {
+    font-size: 13px;
+    margin: 0;
+  }
+  .footer address,
+  .footer p {
+    font-size: 10px;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=footer.css.map */
