--- a/styles/footer/footer.scss
+++ b/styles/footer/footer.scss
@@ -1,10 +1,9 @@
-@import "./constants.scss";
+@import "../variables/variables.scss";
 
 .footer {
   width: 100%;
   background-color: $grey_color;
-  margin-top: -55px;
-  padding-top: 100px;
+  padding-top: 35px;
   padding-bottom: 30px;
   box-sizing: border-box;
 
@@ -63,6 +62,17 @@
     &-rightPart {
       width: 100%;
       text-align: center;
+    }
+
+    h3 {
+      font-size: 13px;
+      margin: 0;
+    }
+
+    address,
+    p {
+      font-size: 10px;
+      width: 100%;
     }
   }
 }
