--- a/styles/formSection/formSection.css
+++ b/styles/formSection/formSection.css
@@ -83,4 +83,19 @@
     width: 100%;
   }
 }
+
+@media (max-width: 576px) {
+  .formSection-content {
+    padding: 20px 10px;
+  }
+  .formSection input,
+  .formSection select,
+  .formSection textarea {
+    width: 100%;
+    font-size: 15px;
+  }
+  .radio-group label {
+    width: 50%;
+  }
+}
 /*# sourceMappingURL=formSection.css.map */
